--- a/dotnetcore_razor/Pages/Shared/_Layout.cshtml
+++ b/dotnetcore_razor/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li>
-                            <a class="nav-link text-dark" asp-page="/Restaurants">Restaurants</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Restaurants/List">Restaurants</a>
                         </li>
                     </ul>
                 </div>
