--- a/dotnetcore_razor/Pages/Restaurants/Edit.cshtml
+++ b/dotnetcore_razor/Pages/Restaurants/Edit.cshtml
@@ -26,3 +26,7 @@
     <button type="submit" class="btn btn-danger">Save</button>
 </form>
 
+@section Scripts {
+<partial name="_ValidationScriptsPartial" />
+}
+
