--- a/dotnetcore_razor/Pages/_ViewImports.cshtml
+++ b/dotnetcore_razor/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using dotnetcore_razor
 @namespace dotnetcore_razor.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, dotnetcore_razor
